# pymptcpanalyzer

./: .gitignore  .nvimrc  .travis.yml  CHANGELOG  CONTRIBUTING.md  CSVFIX.md  DEBUG.md  Makefile  README.md  TODO.md  ci-build.sh  ci.nix  common.sh  config.example  config.ini  core.py  default.nix  exporter.py  fields_to_export.json  flake.nix  get_column_id  graph.py  load.py  lsp_python.lua  mappings.plot  mappings.sh  ns3.cfg  panda.py  pyproject.toml  pyrightconfig.json  querycsv.py  real.cfg  requirements.txt  series-parser.py  server.py  setup.cfg  setup.py  shell.nix  simple.py  sqlite_helpers.py  (+2 more)
.github/: ISSUE_TEMPLATE.md
backup/: mappings.sql.sh  parse_header.py
contrib/: default.nix  mptcpanalyzer.nix  mptcpanalyzer.zsh  nixpkgs.nix  pixcat.nix  red_o.mplstyle  shell.nix
doc/source/: config.rst  contributing.rst  index.rst  usage.rst  xdg.rst
docs/: Makefile  associate_subflows_to_connection.txt  mptcpanalyzer.man
docs/source/: api.rst  conf.py  config.rst  contributing.rst  faq.rst  index.rst  intro.rst  prolog.rst  usage.rst  xdg.rst
examples/: 0-meta0_data.csv  0-subflow0_data.csv  0-subflow2_data.csv  README.md  client_1_tcp_only.pcap  client_1_tcp_only_clean.pcap  client_2.pcap  config  get_pcaps.sh  server_1.pcap  server_1_tcp_only_clean.pcap  server_2.pcap  topology.json
examples/mptcp-pm/: mptcp_2305393538_0.json  (+12 more)
mptcpanalyzer/: __init__.py  analysis.py  cache.py  cli.py  command.py  command_example.py  config.py  connection.py  core.py  data.py  debug.py  exporter.py  gnuplot.py  map.py  metadata.py  mptcp_fields.json  overhead.py  parser.py  pdutils.py  plot.py  simple.py  sqlite_helpers.py  statistics.py  stats.py  symbolic.py  topo.py  tshark.py  version.py
plots/: common.plot  mappings.plot  mappings_vs_ack.py  sf_vs_master.plot
styles/: README.md
tests/: analysis_test.py  batch_commands.txt  batch_interarrival.txt  cache_test.py  commands.txt  config_test.py  gen_transcripts.sh  integration_test.py  list_mptcp.txt  owd_test.py  plot_owd.txt  plugins_test.py  run_tests  run_transcripts.sh  script_mptcp.txt  script_plots_advanced.txt  script_plots_mptcp.txt  script_plots_tcp.txt  script_tcp.txt  script_tcp_plots.txt  script_unstable.txt  summary.txt  summary_server_2_filtered.txt  test_config.ini  trans_mptcp.txt  trans_plots_mptcp.txt  trans_plots_tcp.txt  trans_reinjections.txt  trans_tcp.txt  trans_unstable.txt
utils/: test_pip_install.sh
(+21 files in other folders)
